# pylog

./: .claude-test-paths  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  WEB-WHEEL.md  aplcore  build-wheels.sh  codecov.yml  coderules.md  coverage.xml  data.diff  github-issues-stage1.md  package-lock.json  package.json  pyproject-web.toml  pyproject.toml  pytest.xml  swi_trace.jsonl  test_between.py  test_cut.pl  test_debug.pl  test_fresh_vars.pl  test_inequality.pl  test_sendmore.py  test_subtraction.pl  trace_dump.pl
.claude/: settings.local.json
.claude/agents/: codebase-analyser.md  codebase-locator.md  codebase-pattern-finder.md  documentation-author.md  git-github-operator.md  pr-reviewer.md  prolog-architect.md  web-search-researcher.md
.claude/commands/: commit.md  create_plan.md  describe_pr.md  epic.md  implement_plan.md  merge.md  proceed.md  research-codebase.md  review-pr.md  rules.md  validate_plan.md
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  docs-site.yml  lint.yml  pr-policy-no-ai.yml  update-manifest.yml  web-wheel-release.yml
docs/: ARCH.md  ATTRIBUTED_VARIABLES.md  DEBUG_API.md  ISO_TESTING_USAGE.md  PERFORMANCE.md  PERFORMANCE_ISSUE.md  PLAN.md  STAGE_-1_PLAN.md  STAGE_0_PLAN.md  STAGE_1.5_PLAN.md  STAGE_1_PLAN.md  STAGE_2_PLAN.md  STAGE_3_PLAN.md  STAGE_4_PLAN.md  STREAMING.md  TODO-0.md  TODO-1.5.md  TODO-1.md  TODO-2.md  TODO-3.md  TODO-4.md  TODO-reader-postfix-edge-cases.md  TODO.md  TRACE_FORMAT.md  all_different.md  catch-throw-gap-analysis.md  catch-throw-minimal-fixes-summary.md  catch-throw-test-summary.md  catch-throw-xfail-analysis.md  dap-test-coverage.md  dap.md  debugging_epic.md  engine-disjunction-and-labeling-rework.md  equality-reification-failure-analysis.md  exception-handling-design.md  issue16-catch3-implementation-plan.md  json.md  pr-267.md  pr-277.md  reification-bug-analysis.md  (+11 more)
docs/architecture/: issue-212-exception-handling-plan.md
docs/engine/: ISSUE-0.md
docs/plans/: 2025-01-03-github-issues-status-analysis.md  2025-01-03-reified-disjunction-fix.md  ISO_TESTING.md  (+10 more)
iso_test_js/: README  auxiliaries.pl  harness.pl  hello  iso.tst  iso_8_10.pl  iso_8_8.pl  pylog.skip
mkdocs/: mkdocs.yml
prolog/: repl.py
scripts/: check_no_conditional_imports.py  generate_manifest.py  iso_test_executor.py  iso_test_operators.py  iso_test_parser.py  run_iso_suite.py  sudoku_solver.py  sudoku_vanilla.py
vscode-pylog/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
wheels/: checksums.txt  lark-1.3.0-py3-none-any.whl  manifest.json  pylog-0.1.0-py3-none-any.whl
(+452 files in other folders)
