[project]
name = "pylog"
version = "0.1.0"
description = "A tree-walking Prolog interpreter in Python with CLP(FD)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.0",
    "prompt-toolkit>=3.0.52",
    "pygments>=2.19.2",
]

[project.scripts]
pylog = "prolog.repl:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prolog"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["prolog/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "dev_mode: marks tests that should run in development mode",
    "iso_mode: marks tests that should run in ISO Prolog mode",
    "timeout: marks tests with a timeout limit",
    "stage15: marks tests for Stage 1.5 (operator support)",
    "swi_baseline: marks tests that validate against SWI-Prolog behavior",
]

[tool.coverage.run]
source = ["prolog"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@typing.overload",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "PyLog Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"
